# defensive-mcp-audit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  defensive_mcp_audit.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: defensive-mcp-audit.yml  example-consumer.yml  release.yml
action/: action.yml
assets/: .gitkeep
checks/: __init__.py  example_port_check.py
defensive_mcp_audit/: __init__.py  __main__.py  audit.py  cli.py  constants.py  docker_runtime.py  frameworks.py  html_report.py  mcp_config.py  network.py  sarif.py  scoring.py  text_report.py
defensive_mcp_audit/plugins/: __init__.py  registry.py
docs/: PYPI_SETUP.md  SOCIAL_PREVIEW.md
plugins/: example_plugin.py
scripts/: upload_social_preview.mjs  webbridge_finish_setup.sh
templates/: html_report.html.j2
tests/: test_audit.py  test_docker.py  test_network.py  test_scoring.py
tests/fixtures/: ss_sample.txt
